# crfs-rs-mod

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
benches/: crf_bench.rs
examples/: train_and_tag.rs
src/: context.rs  lib.rs  tagger.rs
src/train/: model_writer.rs  trainer.rs
tests/: test_ap_algorithm.rs  test_arow_algorithm.rs  test_end_to_end.rs  test_l2sgd_algorithm.rs  test_pa_algorithm.rs  test_param_validation.rs  test_training.rs
